chore: Add testing server