@@ -1,10 +1,13 @@
 //file:noinspection GroovyAssignabilityCheck
 //file:noinspection GroovyAccessibility
+import xyz.jpenilla.runtask.task.AbstractRun
+
 plugins {
     id 'java'
     id "maven-publish"
     id 'net.minecrell.plugin-yml.bukkit' version '0.6.0'
     id "com.modrinth.minotaur" version "2.+"
+    id "xyz.jpenilla.run-paper" version "2.3.1"
 }
 
 group = 'me.adrigamer2950'
@@ -158,5 +161,36 @@ tasks {
             loaders = ["bukkit", "folia", "paper", "purpur", "spigot"]
             syncBodyFrom = rootProject.file("README.md").text
         }
+    }
+
+    runServer {
+        minecraftVersion("1.20.2")
+
+        downloadPlugins {
+            // ViaVersion
+            hangar("ViaVersion", "5.0.3")
+        }
+    }
+
+    tasks.withType(AbstractRun).configureEach {
+        javaLauncher = javaToolchains.launcherFor {
+            vendor = JvmVendorSpec.JETBRAINS
+            languageVersion = JavaLanguageVersion.of(targetJavaVersion)
+        }
+        jvmArgs(
+                // Hot Swap
+                "-XX:+AllowEnhancedClassRedefinition",
+
+                // Aikar Flags
+                "--add-modules=jdk.incubator.vector", "-XX:+UseG1GC", "-XX:+ParallelRefProcEnabled",
+                "-XX:MaxGCPauseMillis=200", "-XX:+UnlockExperimentalVMOptions", "-XX:+DisableExplicitGC",
+                "-XX:+AlwaysPreTouch", "-XX:G1NewSizePercent=30", "-XX:G1MaxNewSizePercent=40",
+                "-XX:G1HeapRegionSize=8M", "-XX:G1ReservePercent=20", "-XX:G1HeapWastePercent=5",
+                "-XX:G1MixedGCCountTarget=4", "-XX:InitiatingHeapOccupancyPercent=15",
+                "-XX:G1MixedGCLiveThresholdPercent=90", "-XX:G1RSetUpdatingPauseTimePercent=5",
+                "-XX:SurvivorRatio=32", "-XX:+PerfDisableSharedMem", "-XX:MaxTenuringThreshold=1",
+                "-Dusing.aikars.flags=https://mcflags.emc.gs", "-Daikars.new.flags=true"
+        )
+
     }
 }
